Fix test suite (mysql long names, unit test long names, travis, appveyor)

--- a/src/source/Yaaf.MessageArchiveManager.MySQL/app.config
+++ b/src/source/Yaaf.MessageArchiveManager.MySQL/app.config
@@ -8,7 +8,7 @@
 
 
   <connectionStrings>
-    <add name="ArchiveDb_MySql" connectionString="Server=localhost;Database=achivedb_migrate;Uid=xmpp_sql;Pwd=jkYjgeriE8EIEIPrJNb8" providerName="MySql.Data.MySqlClient" />
+    <add name="ArchiveDb_MySQL" connectionString="Server=localhost;Database=achivedb_migrate;Uid=nunit;Pwd=jkYjgeriE8EIEIPrJNb8" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
