--- a/src/test/Test.Yaaf.MessageArchiveManager.MySQL/app.config
+++ b/src/test/Test.Yaaf.MessageArchiveManager.MySQL/app.config
@@ -11,10 +11,10 @@
     
     Execute the following Sql statement to make sure only local access is allowed:
     
-    GRANT ALL PRIVILEGES ON rosterstore_nunit.* To 'xmpp_sql'@'localhost' IDENTIFIED BY 'jkYjgeriE8EIEIPrJNb8';
+    GRANT ALL PRIVILEGES ON archivedb_nunit.* To 'nunit'@'localhost' IDENTIFIED BY 'jkYjgeriE8EIEIPrJNb8';
     
     -->
-    <add name="ArchiveDb_MySQL" connectionString="Server=localhost;Database=rosterstore_nunit;Uid=nunit;Pwd=jkYjgeriE8EIEIPrJNb8" providerName="MySql.Data.MySqlClient" />
+    <add name="ArchiveDb_MySQL" connectionString="Server=localhost;Database=archivedb_nunit;Uid=nunit;Pwd=jkYjgeriE8EIEIPrJNb8" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 
   <entityFramework>
