--- a/src/test/Test.Yaaf.MessageArchiveManager.SQL/app.config
+++ b/src/test/Test.Yaaf.MessageArchiveManager.SQL/app.config
@@ -7,7 +7,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="ArchiveDb_MSSQL" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\archivedb-nunit.mdf;Initial Catalog=archivedb-nunit;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ArchiveDb_MSSQL" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\archivedb-nunit.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <entityFramework>
