--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: csharp
 
 sudo: false  # use the new container-based Travis infrastructure
 
+services:
+  - mysql
+
+before_script:
+  - mysql -e "CREATE USER 'nunit'@'localhost' IDENTIFIED BY 'jkYjgeriE8EIEIPrJNb8';" -uroot
+  - mysql -e "GRANT ALL PRIVILEGES ON archivedb_nunit.* TO 'nunit'@'localhost';" -uroot
+
 script: 
   - ./build.sh All
 
