--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,22 @@
+services:
+  - mysql
+  - mssql2014
+  - mssql2014rs
+
+environment:
+  connection_mssql: "Data Source=(local)\\SQL2014;Database=archivedb_nunit;User ID=sa;Password=Password12!"
+  connection_mysql: "Server=localhost;Database=archivedb_nunit;Uid=root;Pwd=Password12!"
+
 init:
   - git config --global core.autocrlf input
+
 build_script:
   - cmd: build.cmd
+
 test: off
+
 version: 0.0.1.{build}
+
 artifacts:
   - path: bin
     name: bin
