--- a/src/source/Yaaf.MessageArchiveManager.MySQL/app.config
+++ b/src/source/Yaaf.MessageArchiveManager.MySQL/app.config
@@ -4,11 +4,11 @@
 
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
 
 
   <connectionStrings>
-    <add name="ArchiveDb_MySQL" connectionString="Server=localhost;Database=achivedb_migrate;Uid=nunit;Pwd=jkYjgeriE8EIEIPrJNb8" providerName="MySql.Data.MySqlClient" />
+    <add name="ArchiveDb_MySQL" connectionString="Server=localhost;Database=archivedb_migrate;Uid=nunit;Pwd=jkYjgeriE8EIEIPrJNb8" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -35,6 +35,10 @@
       <dependentAssembly>
         <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.8.3.0" newVersion="6.8.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SimpleInjector" publicKeyToken="984cb50dea722e99" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.7.3.0" newVersion="2.7.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
