--- a/src/source/Yaaf.MessageArchiveManager.MySQL/Yaaf.MessageArchiveManager.MySQL.csproj
+++ b/src/source/Yaaf.MessageArchiveManager.MySQL/Yaaf.MessageArchiveManager.MySQL.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
