--- a/src/source/Yaaf.MessageArchiveManager.SQL/Yaaf.MessageArchiveManager.SQL.csproj
+++ b/src/source/Yaaf.MessageArchiveManager.SQL/Yaaf.MessageArchiveManager.SQL.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
