--- a/src/test/Test.Yaaf.MessageArchiveManager.MySQL/app.config
+++ b/src/test/Test.Yaaf.MessageArchiveManager.MySQL/app.config
@@ -63,6 +63,10 @@
         <assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SimpleInjector" publicKeyToken="984cb50dea722e99" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.7.3.0" newVersion="2.7.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <startup>
